Update color variables in CSS and translate text for improved user experience

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 :root {
     --purple-1: #820099;
     /* oscuro */
-    --purple-2: #c344b8;
+    --purple-2: #820099;
     /* medio */
-    --purple-3: #d76ece;
+    --purple-3: #820099;
     /* claro */
 }
 
