Refactor code structure for improved readability and maintainability

--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ header.ribbon .text-white\/60 {
     header.ribbon {
         position: relative;
         z-index: 50;
+        position: sticky;
     }
 
     .mobile-nav {
